--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "env-cmd jest",
     "scraper": "env-cmd node scraper.js",
+    "schedule": "env-cmd node schedule.js",
     "start": "node server.js"
   },
   "keywords": [],
